# ModMesh

./: .gitignore  .gitmodules  PLC.mwp  README.md
CommonComponents/: CMakeLists.txt  EspNowSecurityRouter.cpp  EspNowSecurityRouter.h  ModbusUART.cpp  ModbusUART.h  SharedConfig.h
ESP-NOW-MeshCore/: README.md
ESP-NOW-MeshCore/components/actuators/: CMakeLists.txt  actuators.c
ESP-NOW-MeshCore/components/actuators/include/: actuators.h
ESP-NOW-MeshCore/components/device_reset/: CMakeLists.txt  device_reset.c
ESP-NOW-MeshCore/components/espnow_control/: CMakeLists.txt  espnow_control.c
ESP-NOW-MeshCore/components/espnow_control/include/: espnow_control.h
ESP-NOW-MeshCore/components/mesh_manager/: CMakeLists.txt  mesh_manager.c
ESP-NOW-MeshCore/components/mesh_manager/include/: mesh_manager.h
ESP-NOW-MeshCore/components/message_processor/: CMakeLists.txt  message_processor.c
ESP-NOW-MeshCore/components/message_processor/include/: message_processor.h
ESP-NOW-MeshCore/components/message_provider/: CMakeLists.txt  message_provider.c
ESP-NOW-MeshCore/components/message_provider/include/: message_provider.h
ESP-NOW-MeshCore/components/security_manager/: CMakeLists.txt  security_manager.c
ESP-NOW-MeshCore/components/security_manager/include/: security_manager.h
ESP-NOW-MeshCore/components/sensors/: CMakeLists.txt  sensors.c
ESP-NOW-MeshCore/components/sensors/include/: sensors.h
ESP-NOW-MeshCore/components/shared_config/include/: mesh_types.h  shared_config.h
ESP-NOW-MeshCore/components/status_indicator/: CMakeLists.txt  status_indicator.c
ESP-NOW-MeshCore/components/status_indicator/include/: status_indicator.h
ESP-NOW-MeshCore/components/ws2812_driver/: CMakeLists.txt
ESP-NOW-MeshCore/main/: CMakeLists.txt  main.c
MasterNode/: CMakeLists.txt  MasterNode.awl  README.md  S7_200_MasterNode.awl  sdkconfig
MasterNode/components/device_reset/: device_reset.c
MasterNode/components/espnow_control/: espnow_control.cpp
MasterNode/components/espnow_control/include/: espnow_control.h
MasterNode/components/shared_config/include/: shared_config.h
MasterNode/components/ws2812_driver/include/: ws2812_driver.h
MasterNode/main/: CMakeLists.txt  main.cpp
SlaveNode1/: CMakeLists.txt  README.md  sdkconfig.defaults
SlaveNode1/components/device_reset/: CMakeLists.txt  device_reset.c
SlaveNode1/components/device_reset/include/: device_reset.h
SlaveNode1/components/espnow_control/: CMakeLists.txt  espnow_control.cpp
SlaveNode1/components/modbus_bridge/: modbus_bridge.cpp
SlaveNode1/components/shared_config/include/: shared_config.h
SlaveNode1/components/status_indicator/: CMakeLists.txt
SlaveNode1/components/status_indicator/include/: status_indicator.h
SlaveNode1/components/ws2812_driver/: CMakeLists.txt
SlaveNode1/main/: main.cpp
SlaveNode2/: README.md  sdkconfig.defaults.esp32s3
SlaveNode2/components/device_reset/: device_reset.c
SlaveNode2/components/modbus_bridge/include/: modbus_bridge.h
SlaveNode2/components/ws2812_driver/: ws2812_driver.c
SlaveNode2/main/: main.cpp
SlaveNode3/: CMakeLists.txt  README.md  partitions.csv
SlaveNode3/components/modbus_bridge/: CMakeLists.txt
SlaveNode3/components/shared_config/include/: shared_config.h
SlaveNode3/components/status_indicator/: status_indicator.c
SlaveNode3/main/: CMakeLists.txt  main.cpp
